--- a/add-on/module.conf
+++ b/add-on/module.conf
@@ -22,7 +22,7 @@ logfile=/var/log/mod_gearman/mod_gearman_neb.log
 
 # sets the addess of your gearman job server. Can be specified
 # more than once to add more server.
-server=dashai-modworker:4730
+server=dashai-gearman:4730
 
 
 # sets the address of your 2nd (duplicate) gearman job server. Can
