new config file

--- a/add-on/nagios.cfg
+++ b/add-on/nagios.cfg
@@ -1,11 +1,12 @@
 ##############################################################################
 #
-# NAGIOS.CFG - Sample Main Config File for Nagios 4.2.4
+# NAGIOS.CFG - Sample Main Config File for Nagios 3.5.1
 #
 # Read the documentation for more information on this configuration
 # file.  I've provided some comments here, but things may not be so
 # clear without further explanation.
 #
+# Last Modified: 12-14-2008
 #
 ##############################################################################
 
@@ -25,36 +26,6 @@ log_file=/var/log/nagios/nagios.log
 # You can split your object definitions across several config files
 # if you wish (as shown below), or keep them all in a single config file.
 
-# You can specify individual object config files as shown below:
-#cfg_file=/etc/nagios/objects/commands.cfg
-#cfg_file=/etc/nagios/objects/contacts.cfg
-#cfg_file=/etc/nagios/objects/timeperiods.cfg
-#cfg_file=/etc/nagios/objects/templates.cfg
-
-# Definitions for monitoring the local (Linux) host
-#cfg_file=/etc/nagios/objects/localhost.cfg
-
-# Definitions for monitoring a Windows machine
-#cfg_file=/etc/nagios/objects/windows.cfg
-
-# Definitions for monitoring a router/switch
-#cfg_file=/etc/nagios/objects/switch.cfg
-
-# Definitions for monitoring a network printer
-#cfg_file=/etc/nagios/objects/printer.cfg
-
-
-# You can also tell Nagios to process all config files (with a .cfg
-# extension) in a particular directory by using the cfg_dir
-# directive as shown below:
-
-#cfg_dir=/etc/nagios/servers
-#cfg_dir=/etc/nagios/printers
-#cfg_dir=/etc/nagios/switches
-#cfg_dir=/etc/nagios/routers
-
-#cfg_dir=/etc/nagios/conf.d
-
 cfg_file=/etc/nagiosql/commands.cfg
 cfg_file=/etc/nagiosql/contacts.cfg
 cfg_file=/etc/nagiosql/timeperiods.cfg
@@ -69,6 +40,8 @@ cfg_file=/etc/nagiosql/servicegroups.cfg
 cfg_dir=/etc/nagiosql/hosts
 cfg_dir=/etc/nagiosql/services
 
+cfg_dir=/etc/nagios/conf.d
+
 
 
 
@@ -79,7 +52,7 @@ cfg_dir=/etc/nagiosql/services
 # directly) in order to prevent inconsistencies that can occur
 # when the config files are modified after Nagios starts.
 
-object_cache_file=/var/spool/nagios/objects.cache
+object_cache_file=/var/log/nagios/objects.cache
 
 
 
@@ -95,7 +68,7 @@ object_cache_file=/var/spool/nagios/objects.cache
 # Read the documentation section on optimizing Nagios to find our more
 # about how this feature works.
 
-precached_object_file=/var/spool/nagios/objects.precache
+precached_object_file=/var/log/nagios/objects.precache
 
 
 
@@ -118,7 +91,7 @@ resource_file=/etc/nagios/private/resource.cfg
 # The contents of the status file are deleted every time Nagios
 #  restarts.
 
-status_file=/var/spool/nagios/status.dat
+status_file=/var/log/nagios/status.dat
 
 
 
@@ -159,6 +132,24 @@ check_external_commands=1
 
 
 
+# EXTERNAL COMMAND CHECK INTERVAL
+# This is the interval at which Nagios should check for external commands.
+# This value works of the interval_length you specify later.  If you leave
+# that at its default value of 60 (seconds), a value of 1 here will cause
+# Nagios to check for external commands every minute.  If you specify a
+# number followed by an "s" (i.e. 15s), this will be interpreted to mean
+# actual seconds rather than a multiple of the interval_length variable.
+# Note: In addition to reading the external command file at regularly 
+# scheduled intervals, Nagios will also check for external commands after
+# event handlers are executed.
+# NOTE: Setting this value to -1 causes Nagios to check the external
+# command file as often as possible.
+
+#command_check_interval=15s
+command_check_interval=-1
+
+
+
 # EXTERNAL COMMAND FILE
 # This is the file that Nagios checks for external command requests.
 # It is also where the command CGI will write commands that are submitted
@@ -171,10 +162,13 @@ command_file=/var/spool/nagios/cmd/nagios.cmd
 
 
 
-# QUERY HANDLER INTERFACE
-# This is the socket that is created for the Query Handler interface
+# EXTERNAL COMMAND BUFFER SLOTS
+# This settings is used to tweak the number of items or "slots" that
+# the Nagios daemon should allocate to the buffer that holds incoming 
+# external commands before they are processed.  As external commands 
+# are processed by the daemon, they are removed from the buffer.  
 
-#query_socket=/var/spool/nagios/cmd/nagios.qh
+external_command_buffer_slots=4096
 
 
 
@@ -182,7 +176,7 @@ command_file=/var/spool/nagios/cmd/nagios.cmd
 # This is the lockfile that Nagios will use to store its PID number
 # in when it is running in daemon mode.
 
-lock_file=/var/run/nagios/nagios.pid
+lock_file=/var/run/nagios.pid
 
 
 
@@ -192,7 +186,7 @@ lock_file=/var/run/nagios/nagios.pid
 # is created, used, and deleted throughout the time that Nagios is
 # running.
 
-temp_file=/var/spool/nagios/nagios.tmp
+temp_file=/var/log/nagios/nagios.tmp
 
 
 
@@ -312,15 +306,6 @@ log_event_handlers=1
 # this case, set the value to 0.
 
 log_initial_states=0
-
-
-
-# CURRENT STATES LOGGING OPTION
-# If you don't want Nagios to log all current host and service states
-# after log has been rotated to the main log file, you can disable this
-# option by setting this value to 0. Default value is 1.
-
-log_current_states=1
 
 
 
@@ -465,7 +450,7 @@ max_check_result_reaper_time=30
 # Note: Make sure that only one instance of Nagios has access
 # to this directory!  
 
-check_result_path=/var/spool/nagios/checkresults
+check_result_path=/var/log/nagios/spool/checkresults
 
 
 
@@ -593,6 +578,14 @@ auto_rescheduling_window=180
 
 
 
+# SLEEP TIME
+# This is the number of seconds to sleep between checking for system
+# events and service checks that need to be run.
+
+sleep_time=0.25
+
+
+
 # TIMEOUT VALUES
 # These options control how much time Nagios will allow various
 # types of commands to execute before killing them off.  Options
@@ -632,7 +625,7 @@ retain_state_information=1
 # This file is used only if the retain_state_information
 # variable is set to 1.
 
-state_retention_file=/var/spool/nagios/retention.dat
+state_retention_file=/var/log/nagios/retention.dat
 
 
 
@@ -721,7 +714,7 @@ interval_length=60
 # patches to Nagios.  Nagios is critical to you - make sure you keep it in
 # good shape.  Nagios will check once a day for new updates. Data collected
 # by Nagios Enterprises from the update check is processed in accordance 
-# with our privacy policy - see https://api.nagios.org for details.
+# with our privacy policy - see http://api.nagios.org for details.
 
 check_for_updates=1
 
@@ -845,8 +838,9 @@ process_performance_data=1
 # Performance data is only written to these files if the
 # enable_performance_data option (above) is set to 1.
 
-host_perfdata_file=/var/spool/nagios/fluxios/host-perfdata
-service_perfdata_file=/var/spool/nagios/fluxios/service-perfdata
+#host_perfdata_file=/tmp/host-perfdata
+#service_perfdata_file=/tmp/service-perfdata
+
 
 
 # HOST AND SERVICE PERFORMANCE DATA FILE TEMPLATES
@@ -857,12 +851,9 @@ service_perfdata_file=/var/spool/nagios/fluxios/service-perfdata
 # to the performance data file.  Some examples of what you can do are
 # shown below.
 
-#service_perfdata_file_template=DATATYPE::SERVICEPERFDATA\tTIMET::$TIMET$\tHOSTNAME::$HOSTNAME$\tSERVICEDESC::$SERVICEDESC$\tSERVICEPERFDATA::$SERVICEPERFDATA$\tSERVICECHECKCOMMAND::$SERVICECHECKCOMMAND$\tHOSTSTATE::$HOSTSTATE$\tHOSTSTATETYPE::$HOSTSTATETYPE$\tSERVICESTATE::$SERVICESTATE$\tSERVICESTATETYPE::$SERVICESTATETYPE$\tGRAPHITEPREFIX::$_SERVICEGRAPHITEPREFIX$\tGRAPHITEPOSTFIX::$_SERVICEGRAPHITEPOSTFIX$\tMETRICTYPE::$_SERVICEMETRICTYPE$
+#host_perfdata_file_template=[HOSTPERFDATA]\t$TIMET$\t$HOSTNAME$\t$HOSTEXECUTIONTIME$\t$HOSTOUTPUT$\t$HOSTPERFDATA$
+#service_perfdata_file_template=[SERVICEPERFDATA]\t$TIMET$\t$HOSTNAME$\t$SERVICEDESC$\t$SERVICEEXECUTIONTIME$\t$SERVICELATENCY$\t$SERVICEOUTPUT$\t$SERVICEPERFDATA$
 
-#host_perfdata_file_template=DATATYPE::HOSTPERFDATA\tTIMET::$TIMET$\tHOSTNAME::$HOSTNAME$\tHOSTPERFDATA::$HOSTPERFDATA$\tHOSTCHECKCOMMAND::$HOSTCHECKCOMMAND$\tHOSTSTATE::$HOSTSTATE$\tHOSTSTATETYPE::$HOSTSTATETYPE$\tGRAPHITEPREFIX::$_HOSTGRAPHITEPREFIX$\tGRAPHITEPOSTFIX::$_HOSTGRAPHITEPOSTFIX$\tMETRICTYPE::$_HOSTMETRICTYPE$
-
-host_perfdata_file_template=DATATYPE::HOSTPERFDATA\tTIMET::$TIMET$\tHOSTNAME::$HOSTNAME$\tHOSTPERFDATA::$HOSTPERFDATA$\tHOSTCHECKCOMMAND::$HOSTCHECKCOMMAND$
-service_perfdata_file_template=DATATYPE::SERVICEPERFDATA\tTIMET::$TIMET$\tHOSTNAME::$HOSTNAME$\tSERVICEDESC::$SERVICEDESC$\tSERVICEPERFDATA::$SERVICEPERFDATA$\tSERVICECHECKCOMMAND::$SERVICECHECKCOMMAND$
 
 
 # HOST AND SERVICE PERFORMANCE DATA FILE MODES
@@ -872,8 +863,8 @@ service_perfdata_file_template=DATATYPE::SERVICEPERFDATA\tTIMET::$TIMET$\tHOSTNA
 # pipe ("p") mode which avoid blocking at startup, otherwise you will
 # likely want the defult append ("a") mode.
 
-host_perfdata_file_mode=a
-service_perfdata_file_mode=a
+#host_perfdata_file_mode=a
+#service_perfdata_file_mode=a
 
 
 
@@ -883,8 +874,8 @@ service_perfdata_file_mode=a
 # below.  A value of 0 indicates the files should not be periodically
 # processed.
 
-host_perfdata_file_processing_interval=2
-service_perfdata_file_processing_interval=2
+#host_perfdata_file_processing_interval=0
+#service_perfdata_file_processing_interval=0
 
 
 
@@ -893,21 +884,21 @@ service_perfdata_file_processing_interval=2
 # service performance data files.  The interval at which the
 # processing occurs is determined by the options above.
 
-host_perfdata_file_processing_command=process-host-perfdata-file
-service_perfdata_file_processing_command=process-service-perfdata-file
+#host_perfdata_file_processing_command=process-host-perfdata-file
+#service_perfdata_file_processing_command=process-service-perfdata-file
 
 
 
 # HOST AND SERVICE PERFORMANCE DATA PROCESS EMPTY RESULTS
-# These options determine wether the core will process empty perfdata
+# THese options determine wether the core will process empty perfdata
 # results or not. This is needed for distributed monitoring, and intentionally
 # turned on by default.
 # If you don't require empty perfdata - saving some cpu cycles
 # on unwanted macro calculation - you can turn that off. Be careful!
 # Values: 1 = enable, 0 = disable
 
-host_perfdata_process_empty_results=1
-service_perfdata_process_empty_results=1
+#host_perfdata_process_empty_results=1
+#service_perfdata_process_empty_results=1
 
 
 # OBSESS OVER SERVICE CHECKS OPTION
@@ -1133,6 +1124,37 @@ date_format=us
 
 
 
+
+# P1.PL FILE LOCATION
+# This value determines where the p1.pl perl script (used by the
+# embedded Perl interpreter) is located.  If you didn't compile
+# Nagios with embedded Perl support, this option has no effect.
+
+p1_file=/usr/sbin/p1.pl
+
+
+
+# EMBEDDED PERL INTERPRETER OPTION
+# This option determines whether or not the embedded Perl interpreter
+# will be enabled during runtime.  This option has no effect if Nagios
+# has not been compiled with support for embedded Perl.
+# Values: 0 = disable interpreter, 1 = enable interpreter
+
+enable_embedded_perl=1
+
+
+
+# EMBEDDED PERL USAGE OPTION
+# This option determines whether or not Nagios will process Perl plugins
+# and scripts with the embedded Perl interpreter if the plugins/scripts
+# do not explicitly indicate whether or not it is okay to do so. Read
+# the HTML documentation on the embedded Perl interpreter for more 
+# information on how this option works.
+
+use_embedded_perl_implicitly=1
+
+
+
 # ILLEGAL OBJECT NAME CHARACTERS
 # This option allows you to specify illegal characters that cannot
 # be used in host names, service descriptions, or names of other
@@ -1149,12 +1171,10 @@ illegal_object_name_chars=`~!$%^&*|'"<>?,()=
 # host check commands.
 # The following macros are stripped of the characters you specify:
 #	$HOSTOUTPUT$
-#	$LONGHOSTOUTPUT$
 #	$HOSTPERFDATA$
 #	$HOSTACKAUTHOR$
 #	$HOSTACKCOMMENT$
 #	$SERVICEOUTPUT$
-#	$LONGSERVICEOUTPUT$
 #	$SERVICEPERFDATA$
 #	$SERVICEACKAUTHOR$
 #	$SERVICEACKCOMMENT$
@@ -1220,7 +1240,7 @@ daemon_dumps_core=0
 # Values: 1 - Enabled tweaks
 #         0 - Disable tweaks (default)
 
-use_large_installation_tweaks=0
+use_large_installation_tweaks=1
 
 
 
@@ -1228,16 +1248,13 @@ use_large_installation_tweaks=0
 # This option determines whether or not Nagios will make all standard
 # macros available as environment variables when host/service checks
 # and system commands (event handlers, notifications, etc.) are
-# executed.
-# Enabling this is a very bad idea for anything but very small setups,
-# as it means plugins, notification scripts and eventhandlers may run
-# out of environment space. It will also cause a significant increase
-# in CPU- and memory usage and drastically reduce the number of checks
-# you can run.
-# Values: 1 - Enable environment variable macros
-#         0 - Disable environment variable macros (default)
+# executed.  Enabling this option can cause performance issues in 
+# large installations, as it will consume a bit more memory and (more
+# importantly) consume more CPU.
+# Values: 1 - Enable environment variable macros (default)
+#         0 - Disable environment variable macros
 
-enable_environment_macros=0
+enable_environment_macros=1
 
 
 
@@ -1305,7 +1322,7 @@ debug_verbosity=1
 # DEBUG FILE
 # This option determines where Nagios should write debugging information.
 
-debug_file=/var/spool/nagios/nagios.debug
+debug_file=/var/log/nagios/nagios.debug
 
 
 
@@ -1319,50 +1336,6 @@ debug_file=/var/spool/nagios/nagios.debug
 max_debug_file_size=1000000
 
 
-
-# Should we allow hostgroups to have no hosts, we default this to off since
-# that was the old behavior
-
-allow_empty_hostgroup_assignment=0
-
-
-
-# Normally worker count is dynamically allocated based on 1.5 * number of cpu's
-# with a minimum of 4 workers.  This value will override the defaults
-
-#check_workers=3
-
-
-
-# DISABLE SERVICE CHECKS WHEN HOST DOWN
-# This option will disable all service checks if the host is not in an UP state
-#
-# While desirable in some environments, enabling this value can distort report
-# values as the expected quantity of checks will not have been performed
-
-#host_down_disable_service_checks=0
-
-
-
-# EXPERIMENTAL load controlling options
-# To get current defaults based on your system issue a command to
-# the query handler. Please note that this is an experimental feature
-# and not meant for production use. Used incorrectly it can induce
-# enormous latency.
-# #core loadctl
-#   jobs_max - The maximum amount of jobs to run at one time
-#   jobs_min - The minimum amount of jobs to run at one time
-#   jobs_limit - The maximum amount of jobs the current load lets us run
-#   backoff_limit - The minimum backoff_change
-#   backoff_change - # of jobs to remove from jobs_limit when backing off
-#   rampup_limit - Minimum rampup_change
-#   rampup_change - # of jobs to add to jobs_limit when ramping up
-# NOTE: The backoff_limit and rampup_limit are NOT used by anything currently,
-#       so if your system is under load nothing will actively modify the jobs
-#       even if you have these options enabled, they are for external
-#       connector information only.  However, if you change the jobs_max or
-#       jobs_min manually here or through the query handler interface that
-#       WILL affect your system
-#loadctl_options=jobs_max=100;backoff_limit=10;rampup_change=5
+#broker_module=/opt/omd/versions/1.4.0p19.cre/lib/mk-livestatus/livestatus.o  /var/spool/nagios/cmd/live
 broker_module=/usr/local/lib/mk-livestatus/livestatus.o  /var/spool/nagios/cmd/live
 broker_module=/usr/lib64/mod_gearman/mod_gearman_nagios3.o config=/etc/mod_gearman/module.conf
